Fixed alignment with pagination buttons.

--- a/reporting/reports/static/reports/main.css
+++ b/reporting/reports/static/reports/main.css
@@ -9,6 +9,14 @@
     background-color: #2d2d2d;
 }
 
+.jumbotron {
+    margin-bottom: 0;
+    padding-top: .5%;
+    padding-bottom: 3.5%;
+    background-color: #555551;
+    color: azure;
+}
+
 #footer {
     background-color: #2d2d2d;
     border-top: #1b83ac solid 5px;
@@ -17,6 +25,10 @@
     color: #ffffff;
 }
 
-#btn {
+#pagination {
+    text-align: center;
+}
+
+.btn {
     text-align: center;
 }
